Straightened some parentheses

--- a/aip.tex
+++ b/aip.tex
@@ -401,7 +401,7 @@ Below, we describe the relationship between collapses and the other notions intr
 
 \begin{corollary}
 \label{collapse of mf and mc: C}
-Consider a monomial pair $(A, \vv{u})$.  If $\collapse{A}$ (respectively, $\collapse{X}$) is the collapse of $A$ (respectively, a set $X$) along $\O = \mf(A, \vv{u})$, then the following hold.
+Consider a monomial pair $(A, \vv{u})$.  If $\collapse{A}$ \textup(respectively, $\collapse{X}$\textup) is the collapse of $A$ \textup(respectively, a set $X$\textup) along $\O = \mf(A, \vv{u})$, then the following hold.
 
 \begin{enumerate}
 \item $\mf(\collapse{A}, \collapse{\vv{u}}) = \collapse{\O}$ and $\ft{A}{\vv{u}} = \ft{\collapse{A}}{\collapse{\vv{u}}}$.
@@ -756,7 +756,7 @@ Given a monomial matrix $A$, there exists an integer $\beta$ satisfying the foll
 %
 and 
 \[ \collapse{\im \IP(A, \vv{u}q)} = \collapse{\vv{u}} q - \collapse{A} \tail{\vv{s}}_q + \im \ip(A, \vv{u}, \vv{s}, q) \] 
-where $\collapse{A}$ (respectively, $\collapse{X}$) is the collapse of $A$  (respectively, $X$) along $\O$.
+where $\collapse{A}$ \textup(respectively, $\collapse{X}$\textup) is the collapse of $A$  \textup(respectively, $X$\textup) along $\O$.
 \end{corollary}
 
 \begin{proof}
@@ -867,7 +867,7 @@ Given a monomial matrix $A$, there exists a integer $\beta$ with the following p
 The following is a consequence of \Cref{comparing deltas: R} and \Cref{uniform uniform value and image: T}.
 
 \begin{corollary}
-Given a monomial matrix $A$, there exists an integer $\beta$ with the following property\textup:  If $q > \beta$ and $(A, \vv{u})$ is a pair with $\O = \mf(A, \vv{u})$, then $\val \IP(A, \vv{u}q) = \val \IP(\collapse{A}, \collapse{\vv{u}}q)$ and $\collapse{ \im(A, \vv{u}q)} = \im(\collapse{A}, \collapse{\vv{u}}q)$ where $\collapse{A}$ (respectively, $\collapse{X}$) is the collapse of $A$  (respectively, $X$) along $\O$.
+Given a monomial matrix $A$, there exists an integer $\beta$ with the following property\textup:  If $q > \beta$ and $(A, \vv{u})$ is a pair with $\O = \mf(A, \vv{u})$, then $\val \IP(A, \vv{u}q) = \val \IP(\collapse{A}, \collapse{\vv{u}}q)$ and $\collapse{ \im(A, \vv{u}q)} = \im(\collapse{A}, \collapse{\vv{u}}q)$ where $\collapse{A}$ \textup(respectively, $\collapse{X}$\textup) is the collapse of $A$  \textup(respectively, $X$\textup) along $\O$.
 \end{corollary}
 
 \emily[inline]{The following could just replace the above statement?  Replace integer programming language with algebraic language? For instance, as follows?}
